--- a/Is It Prime/Base.lproj/Main.storyboard
+++ b/Is It Prime/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Is_It_Prime" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,10 +15,102 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Is It Prime?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgS-OH-W0d">
+                                <rect key="frame" x="237" y="36" width="127" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="EAb-F6-zfu"/>
+                                    <constraint firstAttribute="width" constant="127" id="yER-hJ-KBh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Enter a number in the box" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTf-k2-gj8">
+                                <rect key="frame" x="122" y="91" width="199" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="aT0-hp-bmI"/>
+                                    <constraint firstAttribute="width" constant="199" id="f8A-fa-fkI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i0w-QJ-yFy">
+                                <rect key="frame" x="153" y="138" width="211" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Are-Tn-o5k"/>
+                                    <constraint firstAttribute="width" constant="211" id="Wbl-a7-bln"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CxO-r4-ROT">
+                                <rect key="frame" x="221" y="190" width="49" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="MeD-S0-50f"/>
+                                    <constraint firstAttribute="width" constant="49" id="pqr-0S-VWh"/>
+                                </constraints>
+                                <state key="normal" title="Submit">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="button:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ngm-0U-eiK"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Yh-5u-3R9">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uOH-0O-71e">
+                                <rect key="frame" x="-18" y="269" width="579" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="579" id="pe5-xM-BPa"/>
+                                    <constraint firstAttribute="height" constant="21" id="sHd-wz-PTz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.80000001192092896" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="CxO-r4-ROT" secondAttribute="centerX" id="560-FU-2cV"/>
+                            <constraint firstAttribute="centerX" secondItem="fTf-k2-gj8" secondAttribute="centerX" id="AHN-qE-wRo"/>
+                            <constraint firstItem="uOH-0O-71e" firstAttribute="top" secondItem="CxO-r4-ROT" secondAttribute="bottom" constant="49" id="GNc-RQ-hll"/>
+                            <constraint firstAttribute="centerX" secondItem="i0w-QJ-yFy" secondAttribute="centerX" id="QcF-gk-wyR"/>
+                            <constraint firstItem="qgS-OH-W0d" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="15" id="Tb3-H7-SEP"/>
+                            <constraint firstAttribute="centerX" secondItem="qgS-OH-W0d" secondAttribute="centerX" id="Tv1-ac-WfG"/>
+                            <constraint firstItem="fTf-k2-gj8" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="71" id="VLw-Z5-HNf"/>
+                            <constraint firstItem="i0w-QJ-yFy" firstAttribute="top" secondItem="fTf-k2-gj8" secondAttribute="bottom" constant="26" id="fLn-Ut-pu1"/>
+                            <constraint firstItem="CxO-r4-ROT" firstAttribute="top" secondItem="i0w-QJ-yFy" secondAttribute="bottom" constant="8" id="pXt-ja-iUP"/>
+                            <constraint firstAttribute="centerX" secondItem="uOH-0O-71e" secondAttribute="centerX" id="xSf-Ew-v8Q"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="number" destination="i0w-QJ-yFy" id="nm3-6f-Jef"/>
+                        <outlet property="result" destination="uOH-0O-71e" id="3FC-a6-fQh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WGx-mv-jEt">
+            <objects>
+                <viewController id="zL8-yS-Ita" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xac-Dp-ZbB"/>
+                        <viewControllerLayoutGuide type="bottom" id="KAe-Xw-WdE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3x7-cV-kNl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ShB-4K-H2h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
